Support testfx tests